<package>
  <name>fcl_catkin</name>
  <version>0.0.0</version>
  <description>fcl_catkin</description>
  <maintainer email="avempati@ethz.ch">Anurag Vempati</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
